libaxl: * [fix] commiting axl updates to make it more visible inside (IE, MO, and Konqueror).

--- a/trunk/libaxl/web/axl-web.css
+++ b/trunk/libaxl/web/axl-web.css
@@ -103,6 +103,7 @@ a {
   border: 1px solid #204a87;
   color: #204a87;
   background: white;
+  padding: 4px;
 }
 .menu a:visited { 
 
